# mijia-skills

./: .agent-rules  CSDN_BLOG_POST.md  README.md  README_EN.md  SKILL.md  instructions.md  pyproject.toml  requirements.txt  setup.py
reference/: device_catalogs.md
scripts/: control_device.py  list_devices.py  setup_env.py
