[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mijia-skills"
version = "0.1.0"
description = "A universal AI agent skill pack for Mijia device control"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "MijiaSkillBot" },
]
dependencies = [
    "pillow>=11.3.0",
    "pycryptodome>=3.23.0",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "tzlocal>=5.3.1",
    "mijiaAPI @ git+https://github.com/yihong0618/mijia-api.git",
]

[project.urls]
Homepage = "https://github.com/lllooollpp/mijia-skills"
